# BarcodeDemo

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENCE.txt  README.md  SYSTEM_REQUIREMENTS.md  requirements.txt  zwing-cpp.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
assets/test-barcodes/: 15-blog-code-with-to-much-data.png:Zone.Identifier  1PjNB.jpg:Zone.Identifier  2daed4g.jpg:Zone.Identifier  3-types-of-barcodes.jpg:Zone.Identifier  Barcode.jpg:Zone.Identifier  QRCodeBarcode.png:Zone.Identifier  bar-code-150961__340.webp:Zone.Identifier  bar-code-260nw-690583990.webp:Zone.Identifier  bar-code-vector-icon-simple-dark-isolated-white-background-eps-150699900.webp:Zone.Identifier  barcode-260nw-556142608.webp:Zone.Identifier  barcode-history-710x367.jpeg:Zone.Identifier  barcode-qr-code-collection_53876-75292.avif  barcode-qr-code-collection_53876-75292.avif:Zone.Identifier  barcode-vs-qr-code.jpg:Zone.Identifier  barcode-water.png:Zone.Identifier  barcodevsqr_800.jpeg:Zone.Identifier  basics of barcodes.webp:Zone.Identifier  black-blank-bar-code-white-260nw-1176410425.webp:Zone.Identifier  code-39.png:Zone.Identifier  d01d40bd-barcode-types-on-ios-barcode-scanner.png:Zone.Identifier  depositphotos_4841836-stock-photo-bar-code.jpg:Zone.Identifier  gettyimages-1198311931-612x612.jpg:Zone.Identifier  (+23 more)
src/: BarcodeDecoder.cpp  BarcodeDecoder.h  BarcodeDecoderZBar.cpp  CameraController.cpp  CameraController.h  IDecoder.h  MainWindow.cpp  MainWindow.h  ZBarDecoder.cpp  ZBarDecoder.h  ZXingDecoder.cpp  ZXingDecoder.h  barcode.cpp  main.cpp
